fix: SonarCloud reports