@@ -7,8 +7,6 @@ import be.vlaanderen.informatievlaanderen.ldes.server.infra.mongo.repositories.L
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class LdesMemberMongoRepository implements LdesMemberRepository {
@@ -27,7 +25,7 @@ public class LdesMemberMongoRepository implements LdesMemberRepository {
 
     @Override
     public List<LdesMember> fetchLdesMembers() {
-        return repository.findAll().stream().map(LdesMemberEntity::toLdesMember).collect(Collectors.toList());
+        return repository.findAll().stream().map(LdesMemberEntity::toLdesMember).toList();
     }
 
 }
